force-app/main/default/objects/leaseworks__Aircraft_Stage__c/leaseworks__Aircraft_Stage__c.object-meta.xml
<CustomObject>
    <label>Aircraft Staging</label>
    <nameField>
        <label>Aircraft Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Aircraft Staging</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>