force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Cash_Maintenance_Reserve_Engine_3_LLP__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Maintenance_Reserve_Engine_3_LLP__c</fullName>
    <label>Z_Unused_2009 CMR Engine 3 LLP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>