force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Cost_to_Half_Life_Heavy_4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cost_to_Half_Life_Heavy_4__c</fullName>
    <label>Z_Unused_2009 Heavy 4 HL MVA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>