force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Sold__c</fullName>
    <label>Date Sold</label>
    <type>Date</type>
</CustomField>