force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Delivery_Date_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Delivery_Date_new__c</fullName>
    <label>Delivery_Date_new</label>
    <type>Date</type>
</CustomField>