force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Engine_Representative__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Engine_Representative__c</fullName>
    <label>Engine Representative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>