force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__ETOPS__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__ETOPS__c</fullName>
    <label>ETOPS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>