force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__In_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__In_Service_Date__c</fullName>
    <label>In Service Date</label>
    <type>Date</type>
</CustomField>