force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Incoming_Data__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Incoming_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incoming Data</label>
    <referenceTo>leaseworks__Incoming_Data__c</referenceTo>
    <relationshipLabel>Aircraft Staging</relationshipLabel>
    <relationshipName>Aircraft_Staging</relationshipName>
    <type>Lookup</type>
</CustomField>