force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Last_C_Check__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_C_Check__c</fullName>
    <label>Z_Unused_2009 Last C-Check</label>
    <type>Date</type>
</CustomField>