force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Last_Weighing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Weighing__c</fullName>
    <description>Source : Volito</description>
    <label>Last Weighing</label>
    <type>Date</type>
</CustomField>