force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Maintenance_Reserve_Heavy_Maintenance_4__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Heavy_Maintenance_4__c</fullName>
    <description>Maintenance reserve for heavy maintenance 4 year check</description>
    <inlineHelpText>Maintenance reserve for heavy maintenance 4 year check</inlineHelpText>
    <label>Z_Unused_2009 NMR HM 4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>