force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Maintenance_Reserve_LG_Right_Wing__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_LG_Right_Wing__c</fullName>
    <label>Z_Unused_2009 NMR LG - Right Wing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>