force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Maintenance_Reserve_Other__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maintenance_Reserve_Other__c</fullName>
    <label>Z_Unused_2009 NMR Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>