force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Maximum_Operational_Take__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maximum_Operational_Take__c</fullName>
    <label>Z_Unused_2009 MTOW (Operational)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>