force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Maximum_Operational_Take_Lbs__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Maximum_Operational_Take_Lbs__c</fullName>
    <label>Maximum Operational Take Lbs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>