force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__MSN_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__MSN_Number__c</fullName>
    <externalId>true</externalId>
    <label>MSN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>