force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>