force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Weight_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Weight_Variant__c</fullName>
    <description>Source: Volito</description>
    <label>Weight Variant</label>
    <length>100</length>
    <type>Text</type>
</CustomField>