force-app/main/default/objects/leaseworks__Aircraft_Stage__c/fields/leaseworks__Wide_body_Narrow_body__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Wide_body_Narrow_body__c</fullName>
    <label>Wide-body/Narrow-body</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Narrow-body</fullName>
            </value>
            <value>
                <fullName>Wide-body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>